--- a/assets/styles/_main.css
+++ b/assets/styles/_main.css
@@ -16,7 +16,7 @@ body {
     flex-direction: column;
 }
 
-h1, h2, h3 {
+h1, h2, h3, label {
     font-family: "Montserrat", Verdana, Geneva, Tahoma, sans-serif;
 }
 
