--- a/assets/styles/_form.css
+++ b/assets/styles/_form.css
@@ -2,6 +2,10 @@
     max-width: 60ch;
     margin: auto;
 
+    & h3 {
+        color: var(--primary-color);
+    }
+
     & span, small {
         color: red;
     }
